# wa-fin-ctrl

./: .gitignore  .wranglerignore  AGENTS.md  Dockerfile  IMPLEMENTACAO_DJANGO.md  Makefile  README.md  app.py  app.sh  calculo.csv  check.py  cli.py  diagnostico.csv  diagnostico_processamento.csv  docker-compose.yml  docker-entrypoint.sh  env.py  helper.py  html.py  html_generator.py  ia.py  index-2025-04-Abril-20250526.html  index.html  manage.py  mensagens.csv  ocr.py  out.csv  pyproject.toml  relatorios.py  report-2025-04-Abril.html  report-2025-05-Maio.html  report-2025-06-Junho.html  report-2025-07-Julho.html  report-edit-2025-04-Abril.html  report-edit-2025-05-Maio.html  report-edit-2025-06-Junho.html  report-edit-2025-07-Julho.html  report.html  report_generator.py  reporter.py  (+7 more)
.cursor/rules/: commands.mdc  comment.mdc  constants.mdc  dev.mdc  dry.mdc  env.mdc  imports.mdc  massa.mdc  mono-src.mdc  sh.mdc  shell.mdc  test.mdc  tmp.mdc
CHANGELOG/: 20251031141742.md  20251031144118.md  20251031154328.md  20251031172608.md  20251101113744.md  20251101122947.md  20251101130409.md  20251101133045.md  20251101194324.md
cloud/: AGENTS.md
cloud/api/: .eslintrc.js  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yaml  entrypoint.sh  env.example  jest.config.js  nest-cli.json  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
cloud/ui/: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
db/: db.ddl  db.sqlite3
dev/: pdf.py
docs/: prestacao_contas.xls
examples/: api_example.py
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/public/: entries-mock.json  mock-data.json  report-2024-01.json
frontend/src/: App.css  App.jsx  (+1 more)
imgs/: edits-maio-2025.json
import/: edits.json
input/: _chat.txt
local/: .wranglerignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  wa-fin.py
mensagens/: calculo.csv  mensagens.csv
ocr/: extract.xml  extract.xml	
proj/: README-spec.md  README.md  audit-history-spec.md  audit-history.md  validation-issue-log.json  validation-report-spec.md  validation-report.md
split/: app_part_aa  app_part_ab  app_part_ac  app_part_ad  app_part_ae  app_part_af  app_part_ag  app_part_ah  app_part_ai  app_part_aj
src/: __init__.py
static/: index-2025-05-Maio-20250526.html  scripts.js  styles.css
staticfiles/: styles.css
templates/: _row.html.j2  base.html.j2  index.html.j2  monthly_report.html.j2  monthly_report_editable.html.j2  print_report.html.j2  report.html.j2  unified_report.html.j2
(+436 files in other folders)
