# pyproject.toml
# Caminho relativo ao projeto: pyproject.toml
# Configuração do Poetry para gerenciamento de dependências do projeto
[tool.poetry]
name = "wa-fin-ctrl"
version = "0.1.0"
description = "Sistema web de processamento de comprovantes financeiros por WhatsApp"
authors = ["Ricardo Malnati ricardomalnati@gmail.com"]
readme = "README.md"
packages = [{include = "wa-fin-ctrl", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "*"
openpyxl = "*"
opencv-python = "*"
pytesseract = "*"
openai = "*"
Pillow = "*"
PyPDF2 = "*"
pdf2image = "*"
pdfplumber = "*"
click = "*"
# Removido: jinja2 não é mais necessário (sem templates J2)
# jinja2 = "^3.1.6"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
python-multipart = "^0.0.9"
django = "^5.0.0"
channels = "^4.0.0"
daphne = "^4.0.0"
websockets = "^15.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 